don’t use Java 21 function